2008-10-18  Ulrich Mueller  <ulm@gentoo.org>

	* configure.in: Add support for GNU/Linux on SuperH.

2008-10-12  Andreas Schwab  <schwab@suse.de>

	* configure.in: Only check for m17n-flt if HAVE_LIBOTF.

2008-08-28  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in: Report USE_TOOLKIT_SCROLLBARS as such (not mentioning
	"X") to avoid confusion.

	* configure: Regenerate.

2008-09-07  Romain Francoise  <romain@orebokech.com>

	* make-dist: Distribute doc/man/ChangeLog.

2008-08-28  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Disable XFT and Freetype when without X.

	* configure: Regenerate.

2008-08-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (NS_IMPL_GNUSTEP): Increase pure size.

2008-08-21  Christian Faulhammer  <opfer@gentoo.org>  (tiny change)

	* configure.in (GNUSTEP_SYSTEM_HEADERS): Define
	GNUSTEP_SYSTEM_HEADERS and GNUSTEP_SYSTEM_LIBRARIES.

	* configure: Regenerate.

2008-08-20  Eli Zaretskii  <eliz@gnu.org>

	* configure.in: Move "#define subprocesses" before
	config_opsysfile is included.

2008-08-19  Kenichi Handa  <handa@m17n.org>

	* INSTALL (Extra fonts): Mention local fonts, don't mention
	mule-unicode.

2008-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* make-dist: Omit info/.arch-inventory.

2008-08-16  Jason Rumney  <jasonr@gnu.org>

	* make-dist (tempdir/nt): Link emacsclient.rc.

2008-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (LIB_SRC_EXTRA_INSTALLABLES): New variable.
	AC_SUBST it.
	(GNU_OBJC_CFLAGS): Define as a shell variable instead of #define.
	AC_SUBST it.
	(OTHER_FILES): Always define for HAVE_NS.
	(C_SWITCH_X_SYSTEM): Don't define as empty for NS_IMPL_COCOA.
	* configure: Regenerate.

2008-08-07  Andreas Schwab  <schwab@suse.de>

	* configure.in: Correctly handle
	--enable-cocoa-experimental-ctrl-g=no and
	--enable-ns-self-contained=yes.

2008-08-06  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in (NS_HAVE_INTEGER): Rename to NS_HAVE_NSINTEGER.