@@ -471,8 +471,13 @@ dnl see the `changequote' comment above.
 		NON_GNU_CPP=/usr/ccs/lib/cpp
 		RANLIB="ar -ts"
 		;;
-      *-sunos5* | *-solaris* )
+      *-sunos5.[7-9]* | *-solaris[7-9]* )
 		opsys=sol2-6
+		emacs_check_sunpro_c=yes
+		NON_GNU_CPP=/usr/ccs/lib/cpp
+
+      *-sunos5* | *-solaris* )
+		opsys=sol2-10
 		emacs_check_sunpro_c=yes
 		NON_GNU_CPP=/usr/ccs/lib/cpp
 		;;
