@@ -1,3 +1,8 @@
+2008-10-23  Ali Bahrami <ali_gnu@emvision.com>  (tiny change)
+
+	* configure (*-sunos5*, *-solaris* ): Use the new file sol2-10.h.
+	Use sol2-6.h for Solaris 7-9.
+
 2008-10-18  Ulrich Mueller  <ulm@gentoo.org>
 
 	* configure.in: Add support for GNU/Linux on SuperH.
